ajustes no uso do swagger 3.1.0 com autogen
